--- a/index.html
+++ b/index.html
@@ -143,26 +143,18 @@
                         consistently. </p>
                 </div>
                 <div class="row featurette">
-                    <div class="col-md-8">
-                        <h2 class="fw-light">Familiar Git pull request process</h2>
+                    <div class="col-md-6 ">
+                        <h4>Familiar Git pull request process</h4>
                         <p class=""><span class="text-muted lead">Collaboration is easy</span> on Git with complete
                             control on each change request and a
                             process that gives flexibility and power to your teams. <span class="text-primary">Facets.cloud</span> modern workflow helps
                             your team keep pace as well as control.</p>
                     </div>
-                    <div class="col-md-4">
-
-                    </div>
-                </div>
-                <div class="row featurette">
-                    <div class="col-md-8 order-md-2">
-                        <h2 class="fw-light">Transparent and trackable changes</h2>
+                    <div class="col-md-6">
+                        <h4>Transparent and trackable changes</h4>
                         <p class=""><span class="text-muted lead">No more surprises.</span> With a clear view of your
                             complete product, everyone has a real-time, single source of truth view of your entire
                             software product infrastructure.</p>
-                    </div>
-                    <div class="col-md-4 order-md-1">
-
                     </div>
                 </div>
             </div>
@@ -179,36 +171,28 @@
                         a consistent and reliable product delivery across all your environments.</p>
                 </div>
                 <div class="row featurette">
-                    <div class="col-md-8">
-                        <h2 class="fw-light">Deploy Complete software product in minutes</h2>
+                    <div class="col-md-6">
+                        <h4>Deploy Complete software product in minutes</h4>
                         <p class=""><span class="text-muted lead">Launching an environment is easy.</span> With a clear
                             and complete definition of the product, your team can launch and destroy a new environment
                             for your cluster in a jiffy.</p>
                     </div>
-                    <div class="col-md-4">
-
-                    </div>
-                </div>
-                <div class="row featurette">
-                    <div class="col-md-8 order-md-2">
-                        <h2 class="fw-light">Empower Everyone</h2>
+                    <div class="col-md-6">
+                        <h4>Empower Everyone</h4>
                         <p class=""><span class="text-muted lead">Continuous Delivery is for everyone.</span>
                             <span class="text-primary">Facets.cloud</span> enables your DevOps, Developers, and QAs to have complete control over what
                             goes when and where.</p>
                     </div>
-                    <div class="col-md-4 order-md-1">
-
-                    </div>
                 </div>
                 <div class="row featurette">
-                    <div class="col-md-8">
-                        <h2 class="fw-light">Reliable and informed Releases</h2>
+                    <div class="col-md-6">
+                        <h4>Reliable and informed Releases</h4>
                         <p class=""><span class="text-muted lead">Not just continuous but reliable too.</span> With
                             inbuilt support for ChatOps tools, everyone is informed of any changes to your product.
                             <span class="text-primary">Facets.cloud</span> also provides hooks to integrate your QA suites to Qualify release
                             propagations.</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
 
                     </div>
                 </div>
@@ -226,37 +210,29 @@
                         in a consistent manner <span class="text-primary">Facets.cloud</span> ensures your teams are empowered always. </p>
                 </div>
                 <div class="row featurette">
-                    <div class="col-md-8">
-                        <h2 class="fw-light">Embrace best practices faster</h2>
+                    <div class="col-md-6">
+                        <h4>Embrace best practices faster</h4>
                         <p class=""><span class="text-muted lead">Always up to date.</span> With <span class="text-primary">Facets.cloud</span> team
                             working day in and day night to keep delivering the latest industry-standard compliance,
                             security, observability, and policies, your team and product are always modern.
                         </p>
                     </div>
-                    <div class="col-md-4">
-
-                    </div>
-                </div>
-                <div class="row featurette">
-                    <div class="col-md-8 order-md-2">
-                        <h2 class="fw-light">Assisted Upgrades and Backups</h2>
+                    <div class="col-md-6">
+                        <h4>Assisted Upgrades and Backups</h4>
                         <p class=""><span class="text-muted lead">Save time on migrations and backups.</span> With
                             inbuilt support to give seamless upgrades to your Kubernetes cluster or any other
                             infrastructure component managed by <span class="text-primary">Facets.cloud</span>, keeps your distractions minimal.</p>
                     </div>
-                    <div class="col-md-4 order-md-1">
-
-                    </div>
                 </div>
                 <div class="row featurette">
-                    <div class="col-md-8">
-                        <h2 class="fw-light">Power to you</h2>
+                    <div class="col-md-6">
+                        <h4>Power to you</h4>
                         <p class=""><span class="text-muted lead">Open platform.</span> With the ability to extend the
                             functionality of all aspects of <span class="text-primary">Facets.cloud</span> product and workflow, DevOps teams are powerful
                             than ever to innovate and deliver.
                         </p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
 
                     </div>
                 </div>
