--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="album py-5 bg-light" id="product">
     <div class="container">
 
-        <ul class="nav nav-pills nav-justified" id="myTab" role="tablist">
+        <ul class="nav nav-pills nav-justified flex-column flex-sm-row" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active lead" id="collaboration-tab" data-bs-toggle="tab"
                         data-bs-target="#collaboration" type="button"
@@ -128,7 +128,7 @@
                 </button>
             </li>
         </ul>
-        <div class="tab-content bg-light" id="myTabContent">
+        <div class="tab-content bg-white border-1" id="myTabContent">
             <div class="tab-pane fade show active px-5 py-5 " id="collaboration" role="tabpanel"
                  aria-labelledby="collaboration-tab">
                 <div class="text-center">
