--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="album py-5 bg-light" id="product">
     <div class="container">
 
-        <ul class="nav nav-pills nav-justified flex-column flex-sm-row" id="myTab" role="tablist">
+        <ul class="nav nav-pills nav-justified flex-column flex-sm-row pt-3" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active lead" id="collaboration-tab" data-bs-toggle="tab"
                         data-bs-target="#collaboration" type="button"
@@ -128,8 +128,8 @@
                 </button>
             </li>
         </ul>
-        <div class="tab-content bg-white border-1" id="myTabContent">
-            <div class="tab-pane fade show active px-5 py-5 " id="collaboration" role="tabpanel"
+        <div class="tab-content bg-white border-1  border" id="myTabContent">
+            <div class="tab-pane fade show active px-md-5 py-md-5 px-sm-2 py-sm-2 " id="collaboration" role="tabpanel"
                  aria-labelledby="collaboration-tab">
                 <div class="text-center">
                     <p class="lead"><span class="text-primary">Facets.cloud</span> is changing how teams build and maintain software product
@@ -143,22 +143,22 @@
                         consistently. </p>
                 </div>
                 <div class="row featurette">
-                    <div class="col-md-6 ">
-                        <h4>Familiar Git pull request process</h4>
-                        <p class=""><span class="text-muted lead">Collaboration is easy</span> on Git with complete
+                    <div class="col-md-6">
+                        <h4 class="fw-light">Familiar Git pull request process</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Collaboration is easy</span> on Git with complete
                             control on each change request and a
                             process that gives flexibility and power to your teams. <span class="text-primary">Facets.cloud</span> modern workflow helps
                             your team keep pace as well as control.</p>
                     </div>
                     <div class="col-md-6">
-                        <h4>Transparent and trackable changes</h4>
-                        <p class=""><span class="text-muted lead">No more surprises.</span> With a clear view of your
+                        <h4 class="fw-light">Transparent and trackable changes</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">No more surprises.</span> With a clear view of your
                             complete product, everyone has a real-time, single source of truth view of your entire
                             software product infrastructure.</p>
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade  border-1 px-5 py-5 " id="continuous" role="tabpanel"
+            <div class="tab-pane fade  border-1 px-md-5 py-md-5 px-sm-2 py-sm-2 " id="continuous" role="tabpanel"
                  aria-labelledby="continuous-tab">
                 <div class="text-center">
                     <p class="lead"><span class="text-primary">Facets.cloud</span> lets you deliver your product to your customers in a seamless and
@@ -172,22 +172,22 @@
                 </div>
                 <div class="row featurette">
                     <div class="col-md-6">
-                        <h4>Deploy Complete software product in minutes</h4>
-                        <p class=""><span class="text-muted lead">Launching an environment is easy.</span> With a clear
+                        <h4 class="fw-light">Deploy Complete software product in minutes</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Launching an environment is easy.</span> With a clear
                             and complete definition of the product, your team can launch and destroy a new environment
                             for your cluster in a jiffy.</p>
                     </div>
                     <div class="col-md-6">
-                        <h4>Empower Everyone</h4>
-                        <p class=""><span class="text-muted lead">Continuous Delivery is for everyone.</span>
+                        <h4 class="fw-light">Empower Everyone</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Continuous Delivery is for everyone.</span>
                             <span class="text-primary">Facets.cloud</span> enables your DevOps, Developers, and QAs to have complete control over what
                             goes when and where.</p>
                     </div>
                 </div>
                 <div class="row featurette">
                     <div class="col-md-6">
-                        <h4>Reliable and informed Releases</h4>
-                        <p class=""><span class="text-muted lead">Not just continuous but reliable too.</span> With
+                        <h4 class="fw-light">Reliable and informed Releases</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Not just continuous but reliable too.</span> With
                             inbuilt support for ChatOps tools, everyone is informed of any changes to your product.
                             <span class="text-primary">Facets.cloud</span> also provides hooks to integrate your QA suites to Qualify release
                             propagations.</p>
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade  border-1 px-5 py-5 " id="comprehensive" role="tabpanel"
+            <div class="tab-pane fade  border-1 px-md-5 py-md-5 px-sm-2 py-sm-2 " id="comprehensive" role="tabpanel"
                  aria-labelledby="comprehensive-tab">
                 <div class="text-center">
                     <p class="lead"><span class="text-primary">Facets.cloud</span> helps your teams not just with delivery but is your companion and
@@ -211,23 +211,23 @@
                 </div>
                 <div class="row featurette">
                     <div class="col-md-6">
-                        <h4>Embrace best practices faster</h4>
-                        <p class=""><span class="text-muted lead">Always up to date.</span> With <span class="text-primary">Facets.cloud</span> team
+                        <h4 class="fw-light">Embrace best practices faster</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Always up to date.</span> With <span class="text-primary">Facets.cloud</span> team
                             working day in and day night to keep delivering the latest industry-standard compliance,
                             security, observability, and policies, your team and product are always modern.
                         </p>
                     </div>
                     <div class="col-md-6">
-                        <h4>Assisted Upgrades and Backups</h4>
-                        <p class=""><span class="text-muted lead">Save time on migrations and backups.</span> With
+                        <h4 class="fw-light">Assisted Upgrades and Backups</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Save time on migrations and backups.</span> With
                             inbuilt support to give seamless upgrades to your Kubernetes cluster or any other
                             infrastructure component managed by <span class="text-primary">Facets.cloud</span>, keeps your distractions minimal.</p>
                     </div>
                 </div>
                 <div class="row featurette">
                     <div class="col-md-6">
-                        <h4>Power to you</h4>
-                        <p class=""><span class="text-muted lead">Open platform.</span> With the ability to extend the
+                        <h4 class="fw-light">Power to you</h4>
+                        <p class="fw-light"><span class="fw-bold text-primary">Open platform.</span> With the ability to extend the
                             functionality of all aspects of <span class="text-primary">Facets.cloud</span> product and workflow, DevOps teams are powerful
                             than ever to innovate and deliver.
                         </p>
