--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </li>
         </ul>
         <div class="tab-content bg-white border-1  border" id="myTabContent">
-            <div class="tab-pane fade show active px-md-5 py-md-5 px-sm-2 py-sm-2 " id="collaboration" role="tabpanel"
+            <div class="tab-pane fade show active p-md-5 p-4 " id="collaboration" role="tabpanel"
                  aria-labelledby="collaboration-tab">
                 <div class="text-center">
                     <p class="lead"><span class="text-primary">Facets.cloud</span> is changing how teams build and maintain software product
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade  border-1 px-md-5 py-md-5 px-sm-2 py-sm-2 " id="continuous" role="tabpanel"
+            <div class="tab-pane fade  border-1 p-md-5 p-4 " id="continuous" role="tabpanel"
                  aria-labelledby="continuous-tab">
                 <div class="text-center">
                     <p class="lead"><span class="text-primary">Facets.cloud</span> lets you deliver your product to your customers in a seamless and
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade  border-1 px-md-5 py-md-5 px-sm-2 py-sm-2 " id="comprehensive" role="tabpanel"
+            <div class="tab-pane fade  border-1 p-md-5 p-4 " id="comprehensive" role="tabpanel"
                  aria-labelledby="comprehensive-tab">
                 <div class="text-center">
                     <p class="lead"><span class="text-primary">Facets.cloud</span> helps your teams not just with delivery but is your companion and
